--- a/public/app/admin/user-list.html
+++ b/public/app/admin/user-list.html
@@ -1,1 +1,1 @@
-<div class="container"><table class="table"><tr ng-repeat="user in userListCtrl.users"><td>{{user.firstName + " " + user.lastName}}</td></tr></table></div>
+<div class="container"><table class="table"><tr ng-repeat="user in userListCtrl.users"><td><a href="/admin/update-user-roles/{{user._id}}">{{user.firstName + " " + user.lastName}}</a></td></tr></table></div>
